# OS-Image-Testing

./: .dockerignore  .env.dist  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  tests
.github/workflows/: code_check.yml
conf/: added_packages.conf  local.conf  packages.conf  supervisord.conf  test_suites_metadata.json  test_suites_metadata.yml  vmetrics-conf.yml
database/: database.py
database/models/: configuration.py  experiment.py  loader.py  observer.py
docker/: compose.yml  docker.mk  image_builder.dockerfile  image_builder.dockerfile.dockerignore  open-suse.dockerfile  python.dockerfile  vm-suse.dockerfile  vm-yocto.dockerfile
docs/: ChaosEngineering.md  Endurance-subsystem-and-utilities-testing.md  Phoronix-test-suite.md  RRDtool.md  VictoriaMetrics.md  Yocto-API-Info.md  Yocto-QEMU-Minimal-Image-Guide.md  bencher-info.md  chaosblade.md  index.md  kirk.md  navigation.md  perfomance-methodology.md  terms.md
docs/guides/: metabase-backup-guide.md  metabase-dashboard-creating-guide.md  metabase_specs.md  testing-guide.md  yocto-qemu-minimal-image-guide.md  yocto-testing-guide.md
docs/guides/metabase/: metabase-dashboards-guide.md
docs/i18n/: CONTRIBUTING_ru.md  README_ru.md
docs/methodology/: ChaosEngineering.md  cycle-analysis.md  failure_emulation.md  instrumental-method.md  leak-detection-method.md  matrix.md  memory-consumption-characteristics.md  microbenchmarking.md  os-component-models.md  perfomance-monitoring.md  resource-management.md  static-performance-tuning.md  use-method.md  working-set-size-estimation-method.md  yocto-api-info.md
docs/stats/: RRDtool.md  VictoriaMetrics.md
docs/utilities/monitoring/: RRDtool.md  VictoriaMetrics.md  collectd.md  eBPF-tracing.md  monigo.md  munin.md  nagios.md
docs/utilities/runners/: kirk.md
docs/utilities/tools-collections/: endurance-subsystem-testing.md  endurance-utilities-list.md  os-component-models.md  performance-testing-tools.md
docs/utilities/visualization/: fio-plot.md  metabase-features.md
layers/meta-custom/conf/: layer.conf
layers/meta-image-tests/conf/: layer.conf
layers/meta-image-tests/recipes-core/: README.md
layers/meta-image-tests/recipes-ltp/: README.md
layers/meta-mytests/conf/: layer.conf
metabase_prototype/: .env  .env.example  README.md  docker-compose.yml  metabase_backup.dump  metabase_backup_26_06_2026.dump
metabase_prototype/db/init/: 00_init.sh  01_schema.sql  02_data.sql  backup_init.sh
metabase_prototype/queries/: 01_subsystems.sql  02_profiles.sql  03_platforms.sql  04_os_versions.sql  05_tools.sql  06_metric_catalog.sql  10_vector_timeseries.sql  11_vector_compare_versions.sql  13_scalar_summary.sql  14_scalar_boxplot.sql  fio_read.sql  fio_read_comp.sql  fio_write.sql  fio_write_comp.sql  iops_comp.sql  iops_seq_read_write_os.sql  iperf3.sql  iperf3_box_plot  iperf3_box_plot.sql  iperf3_comp.sql  iperf3_line.sql  iperf3_tcp_box_plot.sql  iperf3_udp_box_plot.sql  jittter_ms.sql  journalctl_errors.sql  kirk.sql  kirk_comp.sql  ltp_experiment_results.sql  pb_sched_pipe.sql  perf_bench.sql  perf_bench_comp.sql  results_count_os.sql  slow_services.sql  slow_services_comp.sql  slowest_syscalls.sql  slowest_syscalls_comp.sql  stress-ng_experiment_results.sql  systemd_failed_services.sql  systemd_time.sql  systemd_time_avg.sql  (+1 more)
scripts/: add-layers.sh  cmd_yocto.sh  download-opensuse-images.sh  entrypoint-analyzer.sh  entrypoint.sh  entrypoint_analyzer.sh  entrypoint_yocto.sh  export_db_to_excel.py  get-remote-results.py  launch-vm.sh  open-suse-cloud-setup.sh  perf_parser.py  run-open-suse.sh  run-qemu-test.sh  run-tests.sh  start-vm-yocto.sh  wait_for_results.sh
scripts/Yocto-Image-Boot/: Dockerfile  README.md  auto-login_1.0.0.bb  config.sh  docker-compose.yml  entrypoint.sh  handler.sh  init_volume.sh  local.conf  stress-ng_1.0.0.bb  tests.sh
scripts/Yocto-Image-Boot/conf/: layer.conf  local.conf
scripts/Yocto-Image-Boot/tests/: run-ptest  test-cpu.sh  test-disk.sh  test-memory.sh  test-network.sh
scripts/bencher/: bencher-test.sh
scripts/opensuse/: cloud-setup.sh  download-images.sh  download_images.py  repo_check.py  start-vm.sh  suse-compose.sh
src/imgtests/: __main__.py  adapter.py  constant.py  environment.py  exec.py  logger.py  results_adapter.py  runner.py  sizing.py  snapshot.py  sysrep.py  types.py
src/imgtests/database/: database.py
src/imgtests/exec/: adapter.py  atutil.py  base_test.py  base_util.py  debugfs.py  exec.py  fio.py  kirk.py  metrics.py  osinfo.py  perf.py  perf_parser.py  stress_ng.py  test_osinfo.py  user_commands.py  utils.py
src/imgtests/planning/: __init__.py  base.py  executor.py  fio_sizing.py  models.py  plan_builder.py  profiles.py
src/imgtests/reporting/: __init__.py  cli.py  distro_comparison_common.py  distro_comparison_export.py  distro_comparison_status_export.py  excel_export.py  html_report.py
src/imgtests/suites/: duration.py  fault_injection.py  firmware.py  ipc.py  map.py  memory.py  syscalls.py  system.py
src/imgtests/web/: __init__.py  manage.py
tests/: recipes-tests
tests/image/: run_profiled_plan.py  runner.py  utils.py
tests/image/endurance/: cpu.py  disks.py  fault_injection.py  firmware.py  fwts.py  memory.py  network.py  syscalls.py
tests/image/performance/: cpu.py  fio_disks.py  ipc.py  memory.py  network.py  network_scaling.py  perf_stat.py  std_utils.py  stress_ng_general.py  syscalls.py  system.py
tests/misc/: test_makefile.py
tests/performance/: simple-perf-test.sh
tests/unit/imgtests/: test_adapter.py  test_sysrep.py  (+2 more)
web/: db.sqlite3
web/tests/: settings.py
web/tests_interface/: urls.py  views.py
wiki/: Endurance-subsystem-and-utilities-testing.md  Endurance-subsystem-testing-and-LTP.md  Endurance-testing-utilities-and-metrics.md  Yocto-API-Info.md  Yocto-QEMU-Minimal-Image-Guide.md  Yocto-testing-tools.md  performance-testing-tools.md
(+188 files in other folders)
