[project]
name = "imgtests"
version = "0.0.1"
description = "Library for the testing Linux based operating systems."
readme = "README.md"
requires-python = "~=3.13.12"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "paramiko~=4.0.0",
    "typing-extensions~=4.15.0",
    "python-json-logger~=4.0.0",
    "deepdiff~=8.6.1",
    "sqlalchemy~=2.0.46",
    "psycopg[binary]~=3.3.2",
    "fio-plot~=1.1.15",
    "matplotlib~=3.10.8",
    "setuptools"
]

[dependency-groups]
lint = [
    "ruff~=0.14.14",
]
tests = [
    "pytest~=9.0.2",
]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "ANN003",  # missing type annotations for `*kwargs`
    "ANN201",
    "ANN204",
    "ANN401",  # dynamically typed expressions (typing.Any)
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "COM812",
    "FBT001",
    "FBT002",
]

[tool.ruff.lint.per-file-ignores]
"tests/unit/*" = [
    "S101"      # We use asserts in the unit tests
]
"tests/misc/*" = [
    "S101"      # We use asserts in the unit tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.pytest.ini_options]
addopts = "-v"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests/unit", "tests/misc"]
pythonpath = [
    "src",
]
