[project]
name = "imgtests"
version = "0.0.1"
description = "Library for the testing Linux based operating systems."
readme = "README.md"
requires-python = "~=3.14.4"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "paramiko~=4.0.0",
    "typing-extensions~=4.15.0",
    "python-json-logger~=4.1.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.1",
    "deepdiff~=9.0.0",
    "sqlalchemy~=2.0.49",
    "psycopg[binary]~=3.3.3",
    "fio-plot~=1.1.21",
    "jinja2~=3.1.6",
    "matplotlib~=3.10.8",
    "setuptools~=82.0.1",
    "numpy~=2.4.4",
    "openpyxl~=3.1.5",
    "django~=6.0.4",
    "django-tasks-db~=0.12.0",
]

[project.scripts]
imgtests-export-db-to-excel = "imgtests.reporting.excel_export:main"
imgtests-export-distro-comparison-to-excel = "imgtests.reporting.distro_comparison_export:main"

[dependency-groups]
lint = [
    "ruff~=0.15.12",
]
tests = [
    "pytest~=9.0.3",
    "pytest-cov~=7.1.0",
]

[tool.setuptools.package-data]
"imgtests.reporting" = ["templates/**/*", "static/*"]
"imgtests.web" = [
    "**/*.css",
    "**/*.js",
    "**/*.html"
]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "ANN201",
    "ANN204",
    "ANN401",  # dynamically typed expressions (typing.Any)
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "FBT001",
    "FBT002",
    "FIX002",
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/unit/*" = [
    "S101"      # We use asserts in the unit tests
]
"tests/misc/*" = [
    "S101"      # We use asserts in the unit tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.coverage.run]
branch = true

[tool.coverage.report]
include_namespace_packages = true
precision = 2

[tool.coverage.xml]
output = "tests/pytest-coverage.xml"

[tool.pytest.ini_options]
addopts = "-v --cov=src/ --cov-report xml --cov-report term"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests/unit", "tests/misc"]
pythonpath = [
    "src",
]

[build-system]
requires = ["setuptools~=80.10.2", "wheel~=0.46.3"]
build-backend = "setuptools.build_meta"
